@@ -1,3 +1,10 @@
+2014-07-09  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/functions_events.php, operation/events/events.php,
+	operation/events/events_list.php: Replaced json_encode()
+	with io_json_mb_encode() to avoid invalid encoding with multi-byte
+	characters.
+
 2014-07-08  Mario Pulido <mario.pulido@artica.es>
 
 	* include/help/en/help_snmp_alert_field1.php,
